removed home page image and fixed spacing. Projects list spacing changed to grid

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,13 +7,27 @@
 }
 
 .home {
+	letter-spacing: 0.3rem;
+}
+
+.homeText {
+	margin-top: 1rem;
 	font-family: var(--title-font);
+	font-weight: 400;
+	font-size: 2.5rem;
+	color: var(--title-color);
+}
+
+.slidingText {
 	font-size: 1.5rem;
 	font-weight: 300;
+}
+
+.devText {
+	font-family: var(--title-font);
+	font-weight: 300;
+	font-size: 1.5rem;
 	color: var(--title-color);
-	line-height: 129.69%;
-	letter-spacing: 0.1rem;
-	margin: 1.5rem;
 }
 
 .line {
@@ -36,23 +50,18 @@
 	color: var(--accent-color);
 }
 
-.slidingText {
-	font-size: 2.5rem;
-	font-weight: 300;
-}
-
 .arrowButton {
 	cursor: pointer;
 	margin-top: 1rem;
 }
 
-.homeImage {
+/* .homeImage {
 	border-radius: 4px;
 	height: 15rem;
 	width: 100%;
 	margin-top: 4rem;
 	margin-bottom: 6rem;
-}
+} */
 
 /* About Section */
 
@@ -65,15 +74,12 @@
 
 .aboutStory {
 	font-family: var(--body-font);
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 1rem;
-	margin-left: 0.7rem;
+	margin: 2rem 0rem;
 }
 
 .skillsTitle {
-	margin-top: 2rem;
-	align-self: center;
+	margin-top: 1rem;
+	align-self: flex-start;
 	color: var(--title-color);
 	font-family: var(--title-font);
 	font-weight: 300;
@@ -84,7 +90,7 @@
 .skills {
 	color: var(--title-color);
 	font-family: var(--title-font);
-	align-self: center;
+	align-self: flex-start;
 }
 
 .skillSection {
@@ -92,15 +98,13 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
-	margin-bottom: 5rem;
+	margin: 1rem 0rem;
 }
 
 .skillsList {
+	padding-left: 0rem;
 	display: grid;
-	grid-template-columns: 1fr 2fr;
-	grid-template-rows: 1fr 1fr;
-	margin-left: 1rem;
-	margin-bottom: -2rem;
+	grid-template-columns: 1fr 1fr;
 }
 
 .item {
@@ -151,12 +155,31 @@
 		letter-spacing: 0.2rem;
 	}
 
+	.homeText {
+		margin-top: 2rem;
+		font-family: var(--title-font);
+		font-weight: 400;
+		font-size: 3rem;
+		color: var(--title-color);
+	}
+
+	.slidingText {
+		font-size: 2rem;
+		font-weight: 300;
+	}
+
+	.devText {
+		font-family: var(--title-font);
+		font-weight: 300;
+		font-size: 2rem;
+		color: var(--title-color);
+	}
+
 	.homeIcons {
 		margin-top: 10rem;
 	}
 
 	.line {
-		margin-left: 1rem;
 		height: 2px;
 		background-color: var(--font-color);
 		width: 30rem;
@@ -203,19 +226,21 @@
 	}
 
 	.aboutStory {
-		display: flex;
-		flex-direction: row;
+		align-self: center;
+		width: 65rem;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
 	}
 
-	.aboutP {
-		width: 98%;
+	.skillSection {
+		margin: 3rem 0rem;
 	}
 
 	.skillsTitle {
+		align-self: center;
 		font-family: var(--title-font);
 		color: var(--title-color);
 		font-weight: 300;
-		margin-top: 7rem;
 		margin-bottom: 2rem;
 		text-decoration: 2px underline;
 		text-decoration-color: var(--accent-color);
@@ -249,7 +274,7 @@
 	/* Contact Section */
 
 	.contact {
-		margin: 1rem 0rem 6rem 0rem;
+		margin: 3rem 0rem 6rem 0rem;
 	}
 
 	.contactTitle {
