--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -70,6 +70,12 @@
 }
 
 @media (min-width: 768px) {
+	.project {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr 1fr;
+	}
+
 	.container {
 		color: var(--font-color);
 		font-family: var(--body-font);
@@ -92,8 +98,9 @@
 	}
 
 	.image {
+		background-size: cover;
 		height: 100%;
-		width: 100%;
+		width: 90%;
 		border: 1px solid rgb(105, 105, 105);
 		border-radius: 10px;
 		transition-duration: 0.3s;
